[tool.poetry]
name = "uniswap-python"
version = "0.7.2"
description = "An unofficial Python wrapper for the decentralized exchange Uniswap"
repository = "https://github.com/TimeGPT-forcasting-model/uniswap-python.git"
readme = "README.md"
keywords = ["uniswap", "ethereum", "exchange", "trading"]
authors = ["Shane Fontaine <shane6fontaine@gmail.com>", "Erik Bjäreholt <erik@bjareho.lt>", "Benedict Zhou <machespresso@gmail.com>"]
license = "MIT"
packages = [
    { include = "uniswap" },
]
include = ["uniswap/assets/*.abi", "uniswap/assets/*/*.abi"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
unipy = "uniswap:main"

[tool.poetry.dependencies]
python = "^3.7.2"
web3 = { version = "^6.0", allow-prereleases = true }
click = "^8.0.3"
python-dotenv = "*"
typing-extensions = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
black = "*"
pytest = "^6.0"
pytest-cov = "*"
pytest-dotenv = "*"
flake8 = "*"
Sphinx = "*"
sphinx-book-theme = "*"
sphinx-click = "*"
pydata-sphinx-theme = "0.13.1"

[tool.pytest.ini_options]
log_cli = false

[tool.ruff]
ignore = ["E402", "E501"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
